--- a/main.css
+++ b/main.css
@@ -1,12 +1,13 @@
 body{
 
-         background: url("https://cdn.vectorstock.com/i/1000v/42/73/dark-blue-background-seamless-pattern-with-black-vector-39404273.jpg");
-
+  background: url("https://cdn.vectorstock.com/i/1000v/42/73/dark-blue-background-seamless-pattern-with-black-vector-39404273.jpg");
  
 }
 #goalForm{
     padding: 50px;
-    margin: 50px;
+    margin: 5%;
+    margin-left: 350px;
+    margin-right: 350px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -15,7 +16,7 @@ body{
     font-size:x-large;
     color: yellow;
         background:url("https://cdn.photoroom.com/v2/image-cache?path=gs://background-7ef44.appspot.com/backgrounds_v3/black/47_-_black.jpg");
-    background-repeat: none; 
+    background-repeat: no-repeat; 
     background-size:contain;  
     font-weight: bolder;
 }
@@ -41,14 +42,20 @@ input{
 #goalForm input:hover::placeholder{
     color: red ;
 }
-#goalButton{
+button{
     padding: 10px;
     background: orangered;
     border-radius: 15px;
     margin: 10px;
 
 }
-#goalButton:hover{
+button:hover{
     padding: 7px;
     background: greenyellow;
+}
+#delete{
+ display: flex;
+ margin-left: 400px;
+ margin-top: -164px;
+   
 }
