refactor GoalList component to implement goal editing functionality; update GoalView to display formatted target and saved amounts

--- a/main.css
+++ b/main.css
@@ -63,6 +63,14 @@ button:hover{
  margin-top: -164px;
    
 }
+#eddit{
+display: flex;
+ margin-left: 400px;
+ 
+}
+#edditInput{
+    margin: 70px;
+}
 h1{
     color: red;
 }
